# MOOC

./: README.md
Parallel Programming in Java/: .gitignore  README.md
Parallel Programming in Java/Week1/MiniProject1/src/main/java/edu/coursera/parallel/: ReciprocalArraySum.java
Parallel Programming in Java/Week1/Misc/Cpp/: .gitignore  main.cpp
Parallel Programming in Java/Week2/MiniProject2/src/main/java/edu/coursera/parallel/: StudentAnalytics.java
Solid/: README.md
Solid/Cpp/: .gitignore  CMakeLists.txt  Makefile  email.cpp  email.hpp  email_content.hpp  main.cpp  smtp_email.cpp  smtp_email.hpp
Solid/Cpp/include/: email.hpp
Solid/Cpp/src/: email.cpp  main.cpp
